added starting code for GamePage component.

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: maroon;
+  background-color: #751aff;
 }
 
 .App-logo {
@@ -23,10 +23,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
