finished favorite color rendering on boardgames page.

--- a/src/components/BoardgameCard/BoardgameCard.css
+++ b/src/components/BoardgameCard/BoardgameCard.css
@@ -1,3 +1,7 @@
-.favorite {
-    background-color: red;
+#favorite {
+    background-color: yellow;
+}
+
+#not-favorite {
+    background-color: white;
 }
