now rendering user favorites in profile page.

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
-  background-color: #751aff;
+  background-color: maroon;
+  /* background-image: url('./bg-wallpaper.jpg'); */
+  height: 100%;
 }
 
 .App-logo {
