added styling to gamepage component.

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   background-color: maroon;
   /* background-image: url('./bg-wallpaper.jpg'); */
-  height: 100%;
+  height: 180vh;
 }
 
 .App-logo {
