--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,8 @@
     font-size: large;
     position: relative;
     top: 20px;
+    color: white;
+
 }
 
 #last {
@@ -22,7 +24,7 @@
     color: white;
 }
 
-.link:hover {
+.link:hover, .filter-item:hover {
     text-decoration: underline;
     color: rgb(3, 206, 210);
 }
