--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap');
+
+.app-title {
+    font-size: 50px;
+    line-height: 50px;
+    font-family: 'Oleo Script Swash Caps', cursive;
+    margin: 5px;
+}
+
 .login-header {
     background-color: maroon;
     border-radius: 5px;
@@ -6,9 +15,4 @@
 
 .login-title-text {
     display: inline-block;
-    /* color: maroon; */
-}
-
-.icon {
-    color: white;
 }
