added styling to game page. started readme.md.

--- a/src/pages/GamePage/GamePage.css
+++ b/src/pages/GamePage/GamePage.css
@@ -1,6 +1,9 @@
 .game-specs {
     position: relative;
     top: 1%;
+    background-color: rgb(18, 0, 131);
+    padding: 10px;
+    opacity: 90%;
 }
 
 .text {
@@ -9,11 +12,14 @@
 }
 
 .description {
-    color: white;
     font-size: large;
     text-align: left;
     position: absolute;
     right: 10%;
+    background-color: gold;
+    padding: 15px;
+    border-radius: 15px;
+    opacity: 85%;
 }
 
 #icon {
