started markdown. testing image location.

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: maroon;
-  background-image: url('./pages/App/bg-wallpaper.jpg');
+  background-image: url('./pics/bg-wallpaper.jpg');
   background-size: cover;
 }
 
