--- a/src/pages/GamePage/GamePage.css
+++ b/src/pages/GamePage/GamePage.css
@@ -1,25 +1,24 @@
 .game-specs {
     position: relative;
     top: 1%;
-    background-color: rgb(18, 0, 131);
-    padding: 10px;
-    /* opacity: 90%; */
+    background-color: black;
+    /* padding: 5px; */
 }
 
 .text {
     color: white;
-    font-size: large;
+    font-size: medium;
 }
 
 .description {
+    color: white;
     font-size: large;
-    text-align: left;
+    text-align: right;
     position: absolute;
     right: 10%;
-    background-color: gold;
+    background-color: black;
     padding: 15px;
     border-radius: 15px;
-    /* opacity: 85%; */
 }
 
 #icon {
